Fixed alignment of reference title

--- a/src/components/Commits/CommitHeader/CommitHeader.scss
+++ b/src/components/Commits/CommitHeader/CommitHeader.scss
@@ -1,7 +1,7 @@
 @import '../../Colours.scss';
 
 .title {
-    align-items: center;
+    align-items: flex-start;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
